--- a/src/fxapp/main-menu.fxml
+++ b/src/fxapp/main-menu.fxml
@@ -28,7 +28,7 @@
             <Button fx:id="readersButton" mnemonicParsing="false" onAction="#toReaders" prefHeight="300.0" prefWidth="300.0" text="Readers" GridPane.columnIndex="3" />
             <Button fx:id="checkOutsButton" mnemonicParsing="false" onAction="#toCheckOuts" prefHeight="300.0" prefWidth="300.0" text="Check outs" GridPane.rowIndex="1" />
             <Button fx:id="copiesButton" mnemonicParsing="false" onAction="#toCopies" prefHeight="300.0" prefWidth="300.0" text="Copies" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Button fx:id="departmentsButton" mnemonicParsing="false" onAction="#toDepartments" prefHeight="300.0" prefWidth="300.0" text="Departments" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Button fx:id="sectionsButton" mnemonicParsing="false" onAction="#toSections" prefHeight="300.0" prefWidth="300.0" text="Sections" GridPane.columnIndex="2" GridPane.rowIndex="1" />
             <Button fx:id="affiliatesButton" mnemonicParsing="false" onAction="#toAffiliates" prefHeight="300.0" prefWidth="300.0" text="Affiliates" GridPane.columnIndex="3" GridPane.rowIndex="1" />
             <Button fx:id="shiftScheduleButton" mnemonicParsing="false" onAction="#toShiftSchedule" prefHeight="300.0" prefWidth="300.0" text="Shift schedule" GridPane.rowIndex="2" />
             <Button fx:id="shiftsButton" mnemonicParsing="false" onAction="#toShifts" prefHeight="300.0" prefWidth="300.0" text="Shifts" GridPane.columnIndex="1" GridPane.rowIndex="2" />
