--- a/src/fxapp/employees.fxml
+++ b/src/fxapp/employees.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane fx:controller="fxapp.OrdersController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="644.0" prefWidth="954.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="644.0" prefWidth="954.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxapp.OrdersController">
     <children>
-        <Label alignment="CENTER" contentDisplay="CENTER" layoutY="39.0" prefHeight="17.0" prefWidth="954.0" styleClass="our-library-label" text="Orders" />
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutY="39.0" prefHeight="17.0" prefWidth="954.0" styleClass="our-library-label" text="Employees" />
         <Button fx:id="toMainMenuButton" layoutX="832.0" layoutY="553.0" mnemonicParsing="false" onAction="#toMainMenu" prefHeight="35.0" prefWidth="94.0" text="Back">
             <styleClass>
                 <String fx:value="back-button" />
@@ -22,10 +22,13 @@
         <TableView layoutX="22.0" layoutY="113.0" prefHeight="394.0" prefWidth="904.0">
             <columns>
                 <TableColumn prefWidth="59.0" text="ID" />
-                <TableColumn prefWidth="129.0" text="Date" />
-                <TableColumn prefWidth="169.0" text="First name" />
-                <TableColumn prefWidth="209.0" text="Second name" />
-                <TableColumn prefWidth="279.0" text="Book's title" />
+                <TableColumn prefWidth="111.0" text="First name" />
+                <TableColumn prefWidth="135.0" text="Last name" />
+                <TableColumn prefWidth="75.0" text="Affiliate" />
+                <TableColumn prefWidth="127.0" text="Date of employment" />
+                <TableColumn prefWidth="151.0" text="Date of signing a contract" />
+            <TableColumn prefWidth="161.0" text="Date of contract expiration" />
+            <TableColumn prefWidth="71.0" text="Hourly rate" />
             </columns>
         </TableView>
         <GridPane hgap="5.0" layoutX="22.0" layoutY="555.0">
