--- a/src/fxapp/orders.fxml
+++ b/src/fxapp/orders.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane fx:controller="fxapp.OrdersController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="644.0" prefWidth="954.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="644.0" prefWidth="954.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxapp.OrdersController">
     <children>
         <Label alignment="CENTER" contentDisplay="CENTER" layoutY="39.0" prefHeight="17.0" prefWidth="954.0" styleClass="our-library-label" text="Orders" />
         <Button fx:id="toMainMenuButton" layoutX="832.0" layoutY="553.0" mnemonicParsing="false" onAction="#toMainMenu" prefHeight="35.0" prefWidth="94.0" text="Back">
@@ -23,8 +23,8 @@
         <columns>
           <TableColumn prefWidth="59.0" text="ID" />
           <TableColumn prefWidth="129.0" text="Date" />
-            <TableColumn prefWidth="169.0" text="First name" />
-            <TableColumn prefWidth="209.0" text="Second name" />
+            <TableColumn prefWidth="169.0" text="Reader - first name" />
+            <TableColumn prefWidth="209.0" text="Reader - last name" />
             <TableColumn prefWidth="279.0" text="Book's title" />
         </columns>
       </TableView>
