--- a/src/fxapp/employees.fxml
+++ b/src/fxapp/employees.fxml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="644.0" prefWidth="954.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxapp.EmployeesController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="644.0" prefWidth="954.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxapp.EmployeesController">
     <children>
         <Label alignment="CENTER" contentDisplay="CENTER" layoutY="39.0" prefHeight="17.0" prefWidth="954.0" styleClass="our-library-label" text="Employees" />
         <Button fx:id="toMainMenuButton" layoutX="832.0" layoutY="553.0" mnemonicParsing="false" onAction="#toMainMenu" prefHeight="35.0" prefWidth="94.0" text="Back">
@@ -21,14 +14,15 @@
             </styleClass></Button>
         <TableView layoutX="22.0" layoutY="113.0" prefHeight="394.0" prefWidth="904.0">
             <columns>
-                <TableColumn prefWidth="59.0" text="ID" />
-                <TableColumn prefWidth="111.0" text="First name" />
-                <TableColumn prefWidth="135.0" text="Last name" />
-                <TableColumn prefWidth="75.0" text="Affiliate" />
-                <TableColumn prefWidth="127.0" text="Date of employment" />
-                <TableColumn prefWidth="151.0" text="Date of signing a contract" />
-            <TableColumn prefWidth="161.0" text="Date of contract expiration" />
-            <TableColumn prefWidth="71.0" text="Hourly rate" />
+                <TableColumn prefWidth="38.0" text="ID" />
+                <TableColumn prefWidth="87.0" text="First name" />
+                <TableColumn prefWidth="101.0" text="Last name" />
+                <TableColumn prefWidth="74.0" text="Position" />
+                <TableColumn prefWidth="73.0" text="Affiliate" />
+                <TableColumn prefWidth="125.0" text="Date of employment" />
+                <TableColumn prefWidth="154.0" text="Date of signing a contract" />
+            <TableColumn minWidth="0.0" prefWidth="160.0" text="Date of contract expiration" />
+            <TableColumn prefWidth="72.0" text="Hourly rate" />
             </columns>
         </TableView>
         <GridPane hgap="5.0" layoutX="22.0" layoutY="555.0">
