--- a/src/fxapp/shift-schedule.fxml
+++ b/src/fxapp/shift-schedule.fxml
@@ -12,8 +12,8 @@
                 <String fx:value="back-button" />
                 <String fx:value="back-button" />
             </styleClass></Button>
-        <TableView layoutX="22.0" layoutY="113.0" prefHeight="394.0" prefWidth="904.0">
-            <columns>
+        <TableView fx:id="mainTable" layoutX="22.0" layoutY="113.0" prefHeight="394.0" prefWidth="904.0">
+        <columns>
                 <TableColumn prefWidth="43.0" text="ID" />
                 <TableColumn prefWidth="78.0" text="Is valid" />
                 <TableColumn prefWidth="121.0" text="Affiliate" />
