--- a/src/fxapp/check-outs.fxml
+++ b/src/fxapp/check-outs.fxml
@@ -19,7 +19,7 @@
                 <String fx:value="back-button" />
                 <String fx:value="back-button" />
             </styleClass></Button>
-        <TableView layoutX="22.0" layoutY="113.0" prefHeight="394.0" prefWidth="904.0">
+        <TableView fx:id="mainTable" layoutX="22.0" layoutY="113.0" prefHeight="394.0" prefWidth="904.0">
             <columns>
                 <TableColumn prefWidth="59.0" text="ID" />
                 <TableColumn prefWidth="129.0" text="Reader - first name" />
