--- a/src/fxapp/employees.fxml
+++ b/src/fxapp/employees.fxml
@@ -12,7 +12,7 @@
                 <String fx:value="back-button" />
                 <String fx:value="back-button" />
             </styleClass></Button>
-        <TableView layoutX="22.0" layoutY="113.0" prefHeight="394.0" prefWidth="904.0">
+        <TableView fx:id="mainTable" layoutX="22.0" layoutY="113.0" prefHeight="394.0" prefWidth="904.0">
             <columns>
                 <TableColumn prefWidth="38.0" text="ID" />
                 <TableColumn prefWidth="87.0" text="First name" />
