--- a/src/fxapp/orders.fxml
+++ b/src/fxapp/orders.fxml
@@ -19,14 +19,14 @@
             <String fx:value="back-button" />
             <String fx:value="back-button" />
          </styleClass></Button>
-      <TableView layoutX="22.0" layoutY="113.0" prefHeight="394.0" prefWidth="904.0">
-        <columns>
-          <TableColumn prefWidth="59.0" text="ID" />
-          <TableColumn prefWidth="129.0" text="Date" />
-            <TableColumn prefWidth="169.0" text="Reader - first name" />
-            <TableColumn prefWidth="209.0" text="Reader - last name" />
-            <TableColumn prefWidth="279.0" text="Book's title" />
-        </columns>
+        <TableView fx:id="mainTable" layoutX="22.0" layoutY="113.0" prefHeight="394.0" prefWidth="904.0">
+            <columns>
+                <TableColumn prefWidth="59.0" text="ID" />
+                <TableColumn prefWidth="129.0" text="Date" />
+                <TableColumn prefWidth="169.0" text="Reader - first name" />
+                <TableColumn prefWidth="209.0" text="Reader - last name" />
+                <TableColumn prefWidth="279.0" text="Book's title" />
+            </columns>
       </TableView>
       <GridPane hgap="5.0" layoutX="22.0" layoutY="555.0">
         <columnConstraints>
