--- a/src/fxapp/readers.fxml
+++ b/src/fxapp/readers.fxml
@@ -19,8 +19,8 @@
                 <String fx:value="back-button" />
                 <String fx:value="back-button" />
             </styleClass></Button>
-        <TableView layoutX="22.0" layoutY="113.0" prefHeight="394.0" prefWidth="904.0">
-            <columns>
+        <TableView fx:id="mainTable" layoutX="22.0" layoutY="113.0" prefHeight="394.0" prefWidth="904.0">
+        <columns>
                 <TableColumn prefWidth="59.0" text="ID" />
                 <TableColumn prefWidth="155.0" text="First name" />
                 <TableColumn prefWidth="213.0" text="Last name" />
