--- a/src/fxapp/positions.fxml
+++ b/src/fxapp/positions.fxml
@@ -20,11 +20,10 @@
                 <String fx:value="back-button" />
             </styleClass></Button>
         <TableView fx:id="mainTable" layoutX="22.0" layoutY="113.0" prefHeight="394.0" prefWidth="904.0">
-
         <columns>
-                <TableColumn prefWidth="189.0" text="Name" />
-                <TableColumn prefWidth="129.0" text="Minimal hourly rate" />
-                <TableColumn prefWidth="145.0" text="Number of employees" />
+                <TableColumn fx:id="name" prefWidth="189.0" text="Name" />
+                <TableColumn fx:id="minimal_hourly_rate" prefWidth="129.0" text="Minimal hourly rate" />
+                <TableColumn fx:id="number_of_employees" prefWidth="145.0" text="Number of employees" />
             </columns>
         </TableView>
         <GridPane hgap="5.0" layoutX="22.0" layoutY="555.0">
