--- a/src/fxapp/editWindows/deleteElement.fxml
+++ b/src/fxapp/editWindows/deleteElement.fxml
@@ -7,19 +7,18 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxapp.editWindows.AddElement">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxapp.editWindows.DeleteElement">
    <children>
       <GridPane fx:id="editFields" layoutX="61.0" layoutY="43.0" prefHeight="65.0" prefWidth="378.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
       </GridPane>
       <GridPane layoutX="148.0" layoutY="429.0" prefHeight="43.0" prefWidth="205.0">
          <columnConstraints>
@@ -31,10 +30,10 @@
          </rowConstraints>
          <children>
             <Button mnemonicParsing="false" onAction="#cancel" text="Cancel" />
-            <Button mnemonicParsing="false" onAction="#add" text="Add and save" GridPane.columnIndex="1" />
+            <Button mnemonicParsing="false" onAction="#delete" text="Delete and save" GridPane.columnIndex="1" />
          </children>
       </GridPane>
-      <Label layoutX="222.0" layoutY="14.0" text="Enter data:" />
+      <Label layoutX="99.0" layoutY="14.0" text="Are you sure you want to delete this data from database?" />
       <Label fx:id="errorLabel" layoutX="21.0" layoutY="412.0" prefHeight="17.0" prefWidth="459.0" text="Label" textFill="RED" visible="false" />
    </children>
 </AnchorPane>
